# Simple-Trader

./: .gitignore  AGENTS.md  README.md  config.py  eval_colab.py  fix-plan.md  main.py  project.toml  pyproject.toml  textual_trader.py  trade.py
.github/workflows/: deploy.yml
.mimocode/plans/: 1782107568741-proud-mountain.md
docs/: index.html
docs/compose/plans/: 2026-06-23-codebase-fixes.md
models/: stock_model.py
src/: colab_gen.py  crypto_pipeline.py  data_pipeline.py  features.py  inference.py  paper_trader.py  utils.py
tests/: test_config.py  test_ddp.py  test_features.py  test_inference.py  test_models.py  test_paper_trader.py  test_pipeline.py  test_pretrain.py  test_training.py  test_utils.py
training/: pretrain.py  threshold.py  train.py
