[project]
name = "tradingbot"
version = "0.1.0"
description = "Multi-stock ML trading bot with inter-stock relationship learning"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lxml>=6.1.1",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pyperclip>=1.11.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "unlockedpd>=0.3.0",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
